--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mustafa Ahmed Raza",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
